Fix shutdown leak of GtkInvisible in GTK nsLookAndFeel implementation, and shorten lifetime of that GtkInvisible by copying its style.  (Bug 487955)  r=karlt  sr=roc